Closed Bug 1738031 Opened 3 years ago Closed 3 years ago

Saving messages to file with "save as" htm or eml no longer includes message header in the saved document.

Categories

(Thunderbird :: Message Reader UI, defect)

Thunderbird 91
defect

Tracking

(thunderbird_esr91+ fixed, thunderbird95 affected)

RESOLVED FIXED
96 Branch
Tracking Status
thunderbird_esr91 + fixed
thunderbird95 --- affected

People

(Reporter: EBRep, Assigned: u695164)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:93.0) Gecko/20100101 Firefox/93.0

Steps to reproduce:

Used file\save as or Ctr-S to save message as htm document on local Windows 10 device.

Actual results:

Saved document no longer begins with message header information, as it did in previous version before 91. Document consists of message body without header. Header information with sender, recipients, subject and date is needed.

Expected results:

Expected message header at the beginning of the document, as in previous versions of Thunderbird.

Blocks: tb91found
Summary: Saving messages to file with "save as" htm or eml no longer includes message header in the saved document. Before version 91 header was included, and that is preferred. → Saving messages to file with "save as" htm or eml no longer includes message header in the saved document.

My testing shows using Ctrl+ S to save as works as follows;
saves the header in formation for the EML format.
For the document formats, text and HTML, it does not.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Alice, can you catch the regression range?

Component: Untriaged → Message Reader UI
Flags: needinfo?(alice0775)
See Also: → 1734773
See Also: → 1738629
Assignee: nobody → nicolai
Status: NEW → ASSIGNED
Attachment #9250391 - Attachment description: Bug 1738031 - Add Email headers in saved emails as .htm and .eml files. r=mkmelin → Bug 1738031 - Add Email headers in saved emails as .html files. r=mkmelin

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/d2404125017d
Add Email headers in saved emails as .html files. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch

Sorry, I backed this out because it busted a lot of tests. Removing the early return fixed the tests, but it wasn't clear to me if returning should then happen in the next block down like it used to.

Here's the back-out.
https://hg.mozilla.org/comm-central/rev/f3a42608496213cb061780ef202b68e9ca469beb

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

I'm not sure if it's related, but on trunk with an artifact build the message header is never showed.
From digging around a bit it seems that the nsMimeHtmlDisplayEmitter::BroadcastHeaders() is not triggered when a message is selected.

Confirmed.
With the patch backed out the message header is visible again on macOS.
This doesn't seem to affect Windows and Linux for some reason.

Thanks I'll look into it!

TB 91.3.1 not fixed on Windows version. Still no header included when message is saved with htm extension. Header was included through TB 78.14.0.

Of course. It's not fixed even on daily yet.

Attachment #9250391 - Attachment is obsolete: true

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/cc05890fd454
Add test coverage for saved emails through nsMessenger::saveAs for .eml .html and .txt. r=darktrojan
https://hg.mozilla.org/comm-central/rev/42bbd1c757c2
Add Email headers in saved emails as .html files (like they used to). r=mkmelin

Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED

Comment on attachment 9252316 [details]
Bug 1738031 - Regression: Add Email headers in saved emails as .html files. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): comment #3
User impact if declined: Using "Save As" on emails doesn't include the header information on the saved file.
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky):

Attachment #9252316 - Flags: approval-comm-esr91?

(In reply to Nicolai Kasper from comment #16)

User impact if declined: Using "Save As" on emails doesn't include the header information on the saved file.

The header information are not shown on if saved as .html.

Comment on attachment 9252316 [details]
Bug 1738031 - Regression: Add Email headers in saved emails as .html files. r=mkmelin

[Triage Comment]
Approved for esr91

Attachment #9252316 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: