Bug 1738031 - Add Email headers in saved emails as .html files. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D130983

--HG--
extra : rebase_source : 33ba0687720e6f718c699ef529d8d6a485c2695a